--- a/BackEndC/pom.xml
+++ b/BackEndC/pom.xml
@@ -32,13 +32,7 @@
  </dependency> 
  
  
- <!-- for profile pic or pics upload-->
- 
- <dependency>
- <groupId>commons-fileupload</groupId>
- <artifactId>commons-fileupload</artifactId>
- <version>1.3.1</version>
- </dependency>
+
  
     
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
@@ -62,7 +56,29 @@
     <version>4.3.9.Final</version>
 </dependency>  
     
-    
+  
+  
+   <!-- for profile pic or pics upload-->
+ 
+ <dependency>
+ <groupId>commons-fileupload</groupId>
+ <artifactId>commons-fileupload</artifactId>
+ <version>1.3.1</version>
+ </dependency>
+ 
+ <!-- Websocket dependency for messaging -->
+ <dependency>
+  <groupId>org.springframework</groupId>
+  <artifactId>spring-websocket</artifactId>
+  <version>4.0.0.RELEASE</version>
+ </dependency>
+ 
+  <dependency>
+  <groupId>org.springframework</groupId>
+  <artifactId>spring-messaging</artifactId>
+  <version>4.0.0.RELEASE</version>
+ </dependency>
+   
     
     
     
