--- a/BackEndC/pom.xml
+++ b/BackEndC/pom.xml
@@ -79,6 +79,14 @@
     <version>4.3.9.Final</version>
 </dependency>  
     
+    
+<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-validator</artifactId>
+    <version>4.3.1.Final</version>
+</dependency>
+
   
   
    <!-- for profile pic or pics upload-->
